[gd_scene load_steps=2 format=3 uid="uid://kk11ndt32ktc"]

[ext_resource type="Script" path="res://Scripts/UI/UnitDescriptMenu.gd" id="1_hupf5"]

[node name="UnitDescriptMenu" type="Panel"]
offset_left = -149.0
offset_top = -50.0
offset_right = 151.0
offset_bottom = 46.0
script = ExtResource("1_hupf5")

[node name="Label_STR" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.521
anchor_bottom = 0.521
offset_top = -0.0160027
offset_right = 40.0
offset_bottom = 25.984
grow_horizontal = 2
grow_vertical = 2
text = "STR"
horizontal_alignment = 1

[node name="Value_STR" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.729
anchor_bottom = 0.729
offset_top = 0.0159988
offset_right = 40.0
offset_bottom = 26.016
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Label_DEX" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.521
anchor_right = 0.167
anchor_bottom = 0.521
offset_left = -0.100002
offset_top = -0.0160027
offset_right = 39.9
offset_bottom = 25.984
grow_horizontal = 2
grow_vertical = 2
text = "DEX"
horizontal_alignment = 1

[node name="Value_DEX" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.729
anchor_right = 0.167
anchor_bottom = 0.729
offset_left = -0.100002
offset_top = 0.0159988
offset_right = 39.9
offset_bottom = 26.016
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Label_CON" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34
anchor_top = 0.521
anchor_right = 0.34
anchor_bottom = 0.521
offset_top = -0.0160027
offset_right = 40.0
offset_bottom = 25.984
grow_horizontal = 2
grow_vertical = 2
text = "CON"
horizontal_alignment = 1

[node name="Value_CON" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.34
anchor_top = 0.729
anchor_right = 0.34
anchor_bottom = 0.729
offset_top = 0.0159988
offset_right = 40.0
offset_bottom = 26.016
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Label_INT" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.663
anchor_top = 0.521
anchor_right = 0.663
anchor_bottom = 0.521
offset_left = -39.9
offset_top = -0.0160027
offset_right = 0.0999908
offset_bottom = 25.984
grow_horizontal = 2
grow_vertical = 2
text = "INT"
horizontal_alignment = 1

[node name="Value_INT" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.663
anchor_top = 0.729
anchor_right = 0.663
anchor_bottom = 0.729
offset_left = -39.9
offset_top = 0.0159988
offset_right = 0.0999908
offset_bottom = 26.016
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Label_WIS" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.827
anchor_top = 0.521
anchor_right = 0.827
anchor_bottom = 0.521
offset_left = -40.1
offset_top = -0.0160027
offset_right = -0.100006
offset_bottom = 25.984
grow_horizontal = 2
grow_vertical = 2
text = "WIS"
horizontal_alignment = 1

[node name="Value_WIS" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.827
anchor_top = 0.729
anchor_right = 0.827
anchor_bottom = 0.729
offset_left = -40.1
offset_top = 0.0159988
offset_right = -0.100006
offset_bottom = 26.016
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Label_CHA" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.521
anchor_right = 1.0
anchor_bottom = 0.521
offset_left = -40.0
offset_top = -0.0160027
offset_bottom = 25.984
grow_horizontal = 2
grow_vertical = 2
text = "CHA"
horizontal_alignment = 1

[node name="Value_CHA" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.729
anchor_right = 1.0
anchor_bottom = 0.729
offset_left = -40.0
offset_top = 0.0159988
offset_bottom = 26.016
grow_horizontal = 2
grow_vertical = 2
text = "10"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.521
offset_bottom = -0.0160027

[node name="Value_Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.5
offset_right = 113.0
offset_bottom = 2.0
theme_override_font_sizes/font_size = 18
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health_Bar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.403
anchor_top = 0.052
anchor_right = 0.987
anchor_bottom = 0.458
offset_left = 0.0999908
offset_top = 0.0079999
offset_right = -0.100006
offset_bottom = 0.0319977
grow_horizontal = 2
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="Value_HP" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.052
anchor_right = 0.987
anchor_bottom = 0.5
offset_left = -29.0
offset_top = 0.0079999
offset_right = -0.100006
offset_bottom = -5.0
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1
